# advent_of_code_2022

./: aoc2022.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.4/: aoc2022-0.1.0.0-inplace-Days.conf  aoc2022-0.1.0.0-inplace.conf  package.cache
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Helper.hs
test/: Day1Spec.hs  Spec.hs
