cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Barrett
maintainer:         dbarrett@atlassian.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010


test-suite test-melody
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    build-depends:  base>=4.14.3.0, 
                    parsec,                       
                    test-framework,
                    test-framework-hunit,
                    HUnit,
                    Days

library Days
    exposed-modules:    Day1, 
                        Day2, 
                        Helper,
                        Day3,
                        Day4,
                        Day5,
                        Day6,
                        Day7,
                        Day8
    build-depends:    base>=4.14.3.0, parsec, containers>=0.6.5.1, matrix, stack, mtl, transformers, vector
    hs-source-dirs:   src
    default-language: Haskell2010
